WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266812
IFrameFullscreenFlag doesn't need to be on Node
https://bugs.webkit.org/show_bug.cgi?id=266812
Summary
IFrameFullscreenFlag doesn't need to be on Node
Ryosuke Niwa
Reported
2023-12-22 08:47:10 PST
IFrameFullscreenFlag is only ever set on HTMLIFrameElement. Move the flag there.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-12-22 09:07:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22200
EWS
Comment 2
2023-12-22 11:58:36 PST
Committed
272459@main
(519d5e9d71a1): <
https://commits.webkit.org/272459@main
> Reviewed commits have been landed. Closing PR #22200 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-22 11:59:13 PST
<
rdar://problem/120052241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug