IFrameFullscreenFlag doesn't need to be on Node https://bugs.webkit.org/show_bug.cgi?id=266812

Reviewed by Tim Nguyen and Alan Baradlay.

Move IFrameFullscreenFlag from Node to HTMLIFrameElement where this flag is only ever set true.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::setFullscreenFlag):
(WebCore::Element::setIFrameFullscreenFlag): Deleted.
* Source/WebCore/dom/Element.h:
(WebCore::Element::hasFullscreenFlag const):
(WebCore::Element::hasIFrameFullscreenFlag const): Deleted.
* Source/WebCore/dom/FullscreenManager.cpp:
(WebCore::documentsToUnfullscreen):
(WebCore::clearFullscreenFlags): Added.
(WebCore::FullscreenManager::exitFullscreen):
(WebCore::FullscreenManager::finishExitFullscreen):
(WebCore::FullscreenManager::willEnterFullscreen):
(WebCore::FullscreenManager::exitRemovedFullscreenElement):
* Source/WebCore/dom/Node.h:
* Source/WebCore/html/HTMLIFrameElement.h:

Canonical link: https://commits.webkit.org/272459@main