Source/WebCore/dom/Node.h
@@ -605,7 +605,6 @@ protected:
         NeedsUpdateQueryContainerDependentStyle = 1 << 8,
 #if ENABLE(FULLSCREEN_API)
         IsFullscreen = 1 << 9,
-        IsIFrameFullscreen = 1 << 10,
 #endif
     };
 
